--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tanstack_js",
   "version": "0.1.0",
+  "homepage": "https://jadogeri.github.io/Tanstack_React_Table_JS/",
   "private": true,
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
